# Breakout-Game

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  async_loading.h  config.json  game.cpp  game.h  ionCircleRec()实现碰撞检测  main.cpp  scores.txt  t-Path breakout_game.exe) {  t-Path test_collision.cpp) {  test_collision.cpp  test_config.cpp
docs/: Ball'完整游戏设计文档.md  Ball游戏设计原理文档.md  WSL2 图形显示原理文档.md  注意事项.txt
src/: Ball.cpp  Ball.cpp.backup  Ball.h  Brick.cpp  Brick.h  ConfigManager.cpp  ConfigManager.h  FontManager.h  Game.cpp  Game.cpp.backup  Game.h  Game.h.backup  Leaderboard.cpp  Leaderboard.h  Makefile  Paddle.cpp  Paddle.h  main.cpp  main.cpp.backup  main.cpp.backup2  main.cpp.backup5
tests/: simple_test.cpp  simple_test.hpp  test_ball.cpp  test_brick.cpp  test_leaderboard.cpp  test_main.cpp  test_paddle.cpp
